cmake_minimum_required(VERSION 3.5)
project(surfaceflinger)

set(ANDROID_ROOT ${BUILD_NATIVE_ROOT})

file(GLOB SOURCE_FILES
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/mock/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/mock/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/src/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/src/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/src/planner/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/src/planner/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/tests/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/tests/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/tests/planner/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/tests/planner/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/DisplayHardware/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/DisplayHardware/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Effects/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Effects/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/EventLog/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/EventLog/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/FrameTimeline/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/FrameTimeline/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/FrameTracer/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/FrameTracer/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Scheduler/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Scheduler/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Scheduler/src/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Scheduler/src/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Scheduler/tests/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Scheduler/tests/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/TimeStats/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/TimeStats/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/TimeStats/timestatsproto/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/TimeStats/timestatsproto/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Tracing/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Tracing/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Tracing/tools/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Tracing/tools/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/fuzzer/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/fuzzer/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/layerproto/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/layerproto/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/fakehwc/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/fakehwc/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/tracing/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/tracing/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/unittests/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/unittests/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/unittests/mock/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/unittests/mock/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/unittests/mock/DisplayHardware/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/unittests/mock/DisplayHardware/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/unittests/mock/system/window/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/unittests/mock/system/window/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/vsync/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/vsync/*.cpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/waitforvsync/*.c
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/waitforvsync/*.cpp
)

include_directories(
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/include/compositionengine
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/include/compositionengine/impl
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/include/compositionengine/impl/planner
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/include/compositionengine/mock
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/mock
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/src
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/src/planner
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/tests
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/tests/planner
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/DisplayHardware
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Effects
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/EventLog
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/FrameTimeline
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/FrameTracer
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Scheduler
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Scheduler/include/scheduler
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Scheduler/src
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Scheduler/tests
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/TimeStats
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/TimeStats/timestatsatomsproto/include/timestatsatomsproto
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/TimeStats/timestatsproto
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/TimeStats/timestatsproto/include/timestatsproto
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Tracing
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Tracing/tools
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/fuzzer
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/layerproto
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/layerproto/include/layerproto
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/fakehwc
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/tracing
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/unittests
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/unittests/fake
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/unittests/mock
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/unittests/mock/DisplayHardware
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/unittests/mock/system/window
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/utils
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/vsync
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/waitforvsync
)

file (GLOB_RECURSE HEADERS
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/include/compositionengine/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/include/compositionengine/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/include/compositionengine/impl/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/include/compositionengine/impl/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/include/compositionengine/impl/planner/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/include/compositionengine/impl/planner/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/include/compositionengine/mock/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/include/compositionengine/mock/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/tests/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/CompositionEngine/tests/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/DisplayHardware/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/DisplayHardware/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Effects/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Effects/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/EventLog/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/EventLog/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/FrameTimeline/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/FrameTimeline/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/FrameTracer/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/FrameTracer/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Scheduler/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Scheduler/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Scheduler/include/scheduler/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Scheduler/include/scheduler/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Scheduler/tests/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Scheduler/tests/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/TimeStats/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/TimeStats/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/TimeStats/timestatsatomsproto/include/timestatsatomsproto/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/TimeStats/timestatsatomsproto/include/timestatsatomsproto/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/TimeStats/timestatsproto/include/timestatsproto/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/TimeStats/timestatsproto/include/timestatsproto/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Tracing/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Tracing/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Tracing/tools/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/Tracing/tools/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/fuzzer/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/fuzzer/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/layerproto/include/layerproto/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/layerproto/include/layerproto/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/fakehwc/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/fakehwc/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/unittests/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/unittests/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/unittests/fake/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/unittests/fake/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/unittests/mock/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/unittests/mock/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/unittests/mock/DisplayHardware/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/unittests/mock/DisplayHardware/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/unittests/mock/system/window/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/unittests/mock/system/window/*.hpp
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/utils/*.h
        ${ANDROID_ROOT}/frameworks/native/services/surfaceflinger/tests/utils/*.hpp
)

add_executable(
        surfaceflinger
        ${SOURCE_FILES}
        ${HEADERS}
)
